Bug 157573 - FILEOPEN: Incorrect text frame position
Summary: FILEOPEN: Incorrect text frame position
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2023-10-03 11:54 UTC by Xisco Faulí
Modified: 2024-11-01 06:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion MSO vs LibreOffice 24.2 master (54.17 KB, image/png)
2023-10-03 11:54 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-10-03 11:54:41 UTC
Created attachment 189975 [details]
Comparsion MSO vs LibreOffice 24.2 master

Steps to reproduce:
1. Open attachment 71442 [details] from bug 58239

-> The text "Initialer	_____" is on the left side of the document. It should be on the right side. See comparison

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0c4913e03e8427a576138601958f2dbf13b8c37b
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-10-03 11:55:24 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2023-03-17 14:00:17 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2023-03-17 14:10:34 +0000
commit d477fa8ac1b0d3ee81427217bbb5950278ab16db (patch)
tree eff80bbdb718f81b11e0c7eb5c96dbf2f96508df
parent 57914a4084da9107ec6815b1916a4be117c400bf (diff)
sw floattable: unconditionally map <w:tblpPr> to SwFormatFlySplit

Bisected with: bibisect-linux64-7.6

Adding Cc: to Miklos Vajna
Comment 2 Miklos Vajna 2023-10-04 06:35:59 UTC
Thanks, I'll take a look.
Comment 3 Commit Notification 2023-10-18 12:21:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/626fe9ab5ebebc4ef36e35f4aa597c03a3564d22

tdf#157573 sw floattable: fix incorrect lack of left margin after table

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-10-19 14:43:04 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b967e0978276b58cbdc8db7fb215aa0fa07241c3

tdf#157573 sw floattable: fix incorrect lack of left margin after table

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-10-19 16:37:26 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/65f508b44ecbc20c8bd5172d1656639f686730ff

tdf#157573 sw floattable: add missing testcase

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-10-20 07:44:53 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/9343816d83a6640dc14718e805aa0bd1747e3a92

tdf#157573 sw floattable: add missing testcase

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 stragu 2024-11-01 06:43:57 UTC
Verified in own build:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6bd9f1f93301756bdc6fa57911d163e9fa5ad313
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded